# bellwether

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  README-docker.md  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DATA-MODEL.md  DEVELOPING.md
docs/superpowers/plans/: 2026-07-04-bellwether-01-foundation.md  2026-07-04-bellwether-02-ingestion.md  2026-07-05-bellwether-03-llm-layer.md  2026-07-05-bellwether-04-resolve-measure.md  2026-07-05-bellwether-05-evaluation-optimization.md  2026-07-06-bellwether-06-source-discovery.md  2026-07-07-bellwether-07a-alerts-backend.md  2026-07-07-bellwether-07b-frontend.md  2026-07-08-bellwether-dockerize.md  2026-07-08-bellwether-documentation.md  2026-07-11-ingestion-scheduler.md  2026-07-11-local-dev-runner.md  2026-07-11-news-connector.md  2026-07-11-signal-details.md  2026-07-11-signal-pagination.md  2026-07-11-x-link-cards.md
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/api/: client.test.ts  client.ts  schema.ts
migrations/: env.py
migrations/versions/: 4c11eb7e59f7_widen_statements_external_id_and_url_to_.py  5d89a35fc658_alert_rules_alerts_extraction_alert_.py  75da6ec97ef8_add_discovery_columns_to_figures_and_.py  8401b3d9fee9_create_relevance_labels_extraction_.py  aa1236c0980c_create_resolutions_entity_symbols_.py  aba518878d66_create_users_table.py  cd06f0292556_create_figures_sources_statements.py  dfd2c3bc1dd7_create_detections_extractions_add_.py
scripts/: dev.sh  docker-smoke.sh
src/bellwether/: config.py  db.py  ingest.py  labels.py  optimize.py  programs.py  queue.py  seed.py  ssl_ctx.py  windows.py  worker.py
tests/: conftest.py  test_config.py  test_config_alerts.py  test_config_discovery.py  test_config_eval.py  test_config_llm.py  test_config_resolve_measure.py  test_db.py  test_firewall.py  test_ingest.py  test_labels.py  test_models_alerts.py  test_models_discovery.py  test_models_eval.py  test_models_ingestion.py  test_models_llm.py  test_models_resolve_measure.py  test_news_backfill.py  test_news_connector.py  test_optimize_cli.py  test_programs.py  test_queue.py  test_queue_alerts.py  test_queue_discovery.py  test_queue_impacts.py  test_queue_ingest.py  test_rss_connector.py  test_seed.py  test_statement_long_fields.py  test_statements_repo.py  test_users_repo.py  test_watchlist_repo.py  test_windows.py  test_worker.py  test_worker_alerts.py  test_worker_discovery.py  test_worker_ingest.py  test_worker_resolve_measure.py
tests/alerts/: test_engine.py  test_notifier.py  test_rules.py
tests/api/: conftest.py  test_alert_rules_api.py  test_auth.py  test_discovery_review.py  test_discovery_trigger.py  test_feed_api.py  test_news_autocreate.py  test_programs_optimize_api.py  test_review_api.py  test_statements_api.py  test_stream.py  test_watchlist_api.py
tests/connectors/: test_base.py  test_rss.py  test_x.py
tests/discovery/: test_connector_mapping.py  test_contracts.py  test_discoverer.py  test_pipeline.py  test_verify.py  test_websearch.py  test_wikidata.py  test_xverify.py
tests/eval/: test_evaluate.py  test_gepa_and_trainset.py  test_metrics.py  test_optimize.py
tests/fixtures/: sample_feed.xml
tests/llm/: test_champion_seam.py  test_contracts.py  test_detect.py  test_extract.py  test_guard.py  test_resolve.py
tests/market/: test_base.py  test_yfinance_adapter.py
tests/measure/: test_impact.py
tests/security/: test_jwt.py  test_passwords.py
tests/trackb/: test_leaderboard.py  test_report.py
(+106 files in other folders)
