[project]
name = "bellwether"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    # passlib 1.7.4 unconditionally imports the stdlib `crypt` module as one
    # of its backends; `crypt` has been deprecated since Python 3.11 (PEP 594)
    # regardless of which hash scheme is actually used. This is unrelated to
    # the bcrypt version-detection issue (bcrypt is pinned <4.1 for that).
    "ignore:'crypt' is deprecated:DeprecationWarning:passlib.utils",
]
