[project]
name = "bellwether"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.9",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    # passlib 1.7.4 unconditionally imports the stdlib `crypt` module as one
    # of its backends; `crypt` has been deprecated since Python 3.11 (PEP 594)
    # regardless of which hash scheme is actually used. This is unrelated to
    # the bcrypt version-detection issue (bcrypt is pinned <4.1 for that).
    "ignore:'crypt' is deprecated:DeprecationWarning:passlib.utils",
    # starlette.testclient unconditionally warns (via fastapi.testclient's
    # `from starlette.testclient import TestClient` re-export, which is where
    # the stacklevel points) when httpx is the installed HTTP client, nudging
    # toward an unreleased/unavailable `httpx2` package. Despite the name,
    # `StarletteDeprecationWarning` subclasses `UserWarning`, not
    # `DeprecationWarning`. FastAPI's TestClient (used by our API tests) is
    # built on this exact httpx-backed client, so httpx is the intended,
    # supported dependency here (per the task brief) -- this is a
    # library-level nag, not something our code can address.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning:fastapi.testclient",
]
